src/objects/LAC_Coffee_Farm__c.object
<CustomObject>
    <description>A farm detail object that has data specific to coffee farms</description>
    <fields>
        <fullName>Applies_Management_Plan__c</fullName>
        <label>Applies Management Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Plantation_Height_Meters__c</fullName>
        <label>Average Plantation Height Meters</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bought_Seedling__c</fullName>
        <label>Bought Seedling</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>Comercio Justo (FLO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.A.F.E practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Has_Farm_Management__c</fullName>
        <label>Has Farm Management</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Production_Management_Plan__c</fullName>
        <label>Has Production Management Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_Bylaws__c</fullName>
        <label>Knows Bylaws</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAC_Farm__c</fullName>
        <label>LAC Farm</label>
        <referenceTo>LAC_Farm__c</referenceTo>
        <relationshipLabel>LAC Coffee Farms</relationshipLabel>
        <relationshipName>LAC_Coffee_Farms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Made_Seedling__c</fullName>
        <label>Made Seedling</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pests_And_Disease__c</fullName>
        <label>Pests And Disease</label>
        <picklist>
            <picklistValues>
                <fullName>Nemátodos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insectos cortadores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras plagas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal de talluelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ojo de gallo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mancha de hierro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras enfermedades</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Plant_Average_Density__c</fullName>
        <label>Plant Average Density</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plantation_Age__c</fullName>
        <label>Plantation Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Unit__c</fullName>
        <label>Production Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quintales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrobas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seedling_Quality__c</fullName>
        <label>Seedling Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Buena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mala</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seedling_Type__c</fullName>
        <label>Seedling Type</label>
        <picklist>
            <picklistValues>
                <fullName>Semilla certificada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De otras fincas  (no certificada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semilla de producción propia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Varieties__c</fullName>
        <label>Varieties</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caturra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icatu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maragogipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mondo Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montecristo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacamara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache Colis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruiru11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarchimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tekisisc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typica</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Year_Plant_Projection__c</fullName>
        <label>Year Plant Projection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Varieties__c</fullName>
        <label>Year Varieties</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caturra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icatu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maragogipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mondo Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montecristo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacamara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache Colis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruiru11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarchimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tekisisc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typica</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>LAC Coffee Farm</label>
    <nameField>
        <label>LAC Coffee Farm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAC Coffee Farms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>